Further fixes and cleanups.